--- a/Capstone Project.ipynb
+++ b/Capstone Project.ipynb
@@ -3791,7 +3791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
